--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <section id="hangman">
+        <div id='gameStatus'></div>
         <div id='output'>
-            <div class="step active"><img src="./images/1.png" alt=""></div>
-            <div class="step"><img src="./images/2.png" alt=""></div>
-            <div class="step"><img src="./images/3.png" alt=""></div>
-            <div class="step"><img src="./images/4.png" alt=""></div>
-            <div class="step"><img src="./images/5.png" alt=""></div>
-            <div class="step"><img src="./images/6.png" alt=""></div>
-            <div class="step"><img src="./images/7.png" alt=""></div>
-            <div class="step"><img src="./images/8.png" alt=""></div>
+            <div class="step active"><img src="./images/1.png" alt="step__image" class="step__image"></div>
+            <div class="step"><img src="./images/2.png" alt="step__image" class="step__image"></div>
+            <div class="step"><img src="./images/3.png" alt="step__image" class="step__image"></div>
+            <div class="step"><img src="./images/4.png" alt="step__image" class="step__image"></div>
+            <div class="step"><img src="./images/5.png" alt="step__image" class="step__image"></div>
+            <div class="step"><img src="./images/6.png" alt="step__image" class="step__image"></div>
+            <div class="step"><img src="./images/7.png" alt="step__image" class="step__image"></div>
+            <div class="step"><img src="./images/8.png" alt="step__image" class="step__image"></div>
         </div>
         <div id="word"></div>
         <div id="category"></div>
